<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    android:noHistory="true"
    android:padding="10dp"
    tools:context=".MainActivity">

    <ScrollView
    style="@android:style/Widget.DeviceDefault.Light.ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentEnd="true"
    android:layout_marginTop="0dp"
    android:scrollbarStyle="insideInset"
    android:visibility="visible"
    tools:visibility="visible"
    android:layout_alignParentRight="true">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    android:noHistory="true"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="SCIO"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="50sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/logo"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/question_backgorund"
        android:padding="5dp"
        android:text="@string/pergunta"
        android:textColor="#000000"
        android:textSize="15sp" />

    <WebView
        android:id="@+id/webView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question"
        android:layout_centerHorizontal="true"
        />


    <TextView
        android:id="@+id/question2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/webView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/question_backgorund"
        android:padding="5dp"
        android:text="@string/pergunta2"
        android:textColor="#000000"
        android:textSize="15sp" />

    <Button
        android:id="@+id/a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question2"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle"
        android:text="@string/alternativa_a"
        android:textSize="15sp" />

    <Button
        android:id="@+id/b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/a"
        android:layout_marginTop="5dp"
        android:background="@drawable/rectangle"
        android:text="@string/alternativa_b"
        android:textSize="15sp" />

    <Button
        android:id="@+id/c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b"
        android:layout_marginTop="5dp"
        android:background="@drawable/rectangle"
        android:text="@string/alternativa_c"
        android:textSize="15sp" />

    <Button
        android:id="@+id/d"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/c"
        android:layout_marginTop="5dp"
        android:background="@drawable/rectangle"
        android:text="@string/alternativa_d"
        android:textSize="15sp" />

    <Button
        android:id="@+id/e"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/d"
        android:layout_marginTop="5dp"
        android:background="@drawable/rectangle"
        android:text="@string/alternativa_e"
        android:textSize="15sp" />

    </RelativeLayout>

</ScrollView>
</LinearLayout>